Implemented separate swagger for micro-services and added main.go files for micro-services
