# auth/docs/swagger.yaml
@@ -29,26 +29,10 @@ definitions:
     type: object
   models.CreateUserResponseModel:
     properties:
-      age:
+      message:
+        type: string
+      userId:
         type: integer
-      bio:
-        type: string
-      birthday:
-        type: string
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-      mobile_number:
-        type: string
-      name:
-        type: string
-      pancard:
-        type: string
-      updated_at:
-        type: string
     type: object
   models.ErrorResponseModel:
     properties:
@@ -69,19 +53,19 @@ definitions:
         type: string
       birthday:
         type: string
-      created_at:
+      createdAt:
         type: string
       email:
         type: string
       id:
         type: integer
-      mobile_number:
+      mobileNumber:
         type: string
       name:
         type: string
       pancard:
         type: string
-      updated_at:
+      updatedAt:
         type: string
     type: object
 host: localhost:8000
@@ -91,7 +75,7 @@ info:
   title: User API
   version: "1.0"
 paths:
-  /api/users:
+  /api/auth/users:
     get:
       consumes:
       - application/json
